test(BlackjackServiceTest): DTO 수정을 인한 코드 수정